# VAgyojaka1.0

./: CMakeLists.txt  README.md  Vāgyojaka Presentation.pptx  main.cpp  tool.cpp  tool.h  tool.ui
editor/: blockandword.h  editor.cpp  editor.h  texteditor.cpp  texteditor.h  wordeditor.cpp  wordeditor.h  wordlists.qrc
editor/utilities/: changespeakerdialog.h  changespeakerdialog.ui  findreplacedialog.cpp  findreplacedialog.h  findreplacedialog.ui  keyboardshortcutguide.cpp  keyboardshortcutguide.h  taglistdisplaywidget.cpp  taglistdisplaywidget.h  tagselectiondialog.cpp  tagselectiondialog.h  tagselectiondialog.ui  timepropagationdialog.h  timepropagationdialog.ui
mediaplayer/: mediaplayer.cpp  mediaplayer.h  playercontrols.cpp  playercontrols.h  videowidget.cpp  videowidget.h
